--- a/public/ui/iCMS-6.0.0.css
+++ b/public/ui/iCMS-6.0.0.css
@@ -247,7 +247,7 @@ html.no-touch .commentApp-list-wrap .load-more:hover { background: #fefefe; text
 .commentApp-item .cmt-item-img-avatar { width: 25px; height: 25px; border-radius: 2px }
 .commentApp-item .commentApp-content { color: #222; min-height: 22px }
 .commentApp-item .commentApp-content-hd, .commentApp-item .commentApp-content-ft { color: #999 }
-.commentApp-item .commentApp-content-hd .desc, .commentApp-item .commentApp-content-ft .desc { font-size: 12px }
+.commentApp-item .commentApp-content-hd .desc, .commentApp-item .commentApp-content-ft .desc { font-size: 14px }
 .commentApp-item .commentApp-content-ft { font-size: 12px }
 .commentApp-item .like-num { float: right; margin-top: -1px }
 .commentApp-item .like-num>span, .commentApp-item .like-num>em { font-style: normal; vertical-align: -2px }
@@ -271,6 +271,7 @@ html.no-touch .commentApp-list-wrap .load-more:hover { background: #fefefe; text
 #iCMS-comment-list-box { margin: 2px; background: #fff; position: relative; border: none; max-width: 99%; box-shadow: none; }
 #iCMS-comment-list-box .cmt-item-img-avatar { width: 36px; height: 36px; border-radius: 2px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.22); padding: 2px; }
 #iCMS-comment-list-box .commentApp-content-wrap { margin: 0 0 0 48px }
+.iCMS_no_comment{margin-top: 10px;margin-left: 10px; color: #b1b1b1;}
 /* =============== */
 .iCMS_up_down { margin-left: 10px; }
 .iCMS_up_down .up_down_btn { position: relative; display: block; text-decoration: none; text-align: left; color: #fff; background: #fff; font-size: 16px; line-height: 25px; font-family: "微软雅黑"; border: 1px solid #ddd; border-radius: 5px; padding: 5px; float: left; margin-right: 10px; }
@@ -284,3 +285,72 @@ html.no-touch .commentApp-list-wrap .load-more:hover { background: #fefefe; text
 .iCMS_up_down .down { background: url(img/down.png) no-repeat; top: 10px; _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true', sizingMethod='scale', src='img/down.png'); _background: none; }
 .iCMS_up_down .up_gray { background: url(img/up_gray.png) no-repeat; _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true', sizingMethod='scale', src='img/up_gray.png'); _background: none; }
 .iCMS_up_down .down_gray { background: url(img/down_gray.png) no-repeat; top: 10px; _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true', sizingMethod='scale', src='img/down_gray.png'); _background: none; }
+/* iCMS.tip */
+
+.iCMS_tooltip {z-index: 1000; position: absolute; z-index: 1050; display: block; padding: 0px }
+.iCMS_tooltip .tip-arrow{display: none;}
+.iCMS_tooltip.popover {max-width: none;}
+.iCMS_tooltip.popover .popover-content{padding: 4px !important;}
+.iCMS_tooltip.popover .popover-content p, .iCMS_tooltip .popover-content ul, .iCMS_tooltip .popover-content ol { margin-bottom: 0 }
+
+/*.iCMS_tooltip .tip-inner { font: bold 11px/14px 'Lucida Grande', sans-serif }*/
+/*.iCMS_tooltip .tip-arrow-top {}
+.iCMS_tooltip .tip-arrow-right {}
+.iCMS_tooltip .tip-arrow-bottom {}
+.iCMS_tooltip .tip-arrow-left {background: url(img/tip-arrows.gif)}
+*/
+/*
+.iCMS_tooltip {z-index: 1000; position: absolute; top: 0; left: 0; z-index: 1050; display: block; padding: 12px }
+.iCMS_tooltip.top { margin-top: -6px }
+.iCMS_tooltip.right { margin-left: 6px }
+.iCMS_tooltip.bottom { margin-top: 6px }
+.iCMS_tooltip.left { margin-left: -6px }
+.iCMS_tooltip.top .arrow { bottom: 0; left: 50%; margin-left: -13px; border-left: 13px solid transparent; border-right: 13px solid transparent; border-top: 13px solid #ccc }
+.iCMS_tooltip.top .arrow2 { bottom: 1px; left: 50%; margin-left: -13px; border-left: 13px solid transparent; border-right: 13px solid transparent; border-top: 13px solid #fafafa }
+.iCMS_tooltip.top .arrow2.loading { bottom: 1px; left: 50%; margin-left: -13px; border-left: 13px solid transparent; border-right: 13px solid transparent; border-top: 13px solid #fff }
+.iCMS_tooltip.right .arrow { top: 50%; left: 0; margin-top: -13px; border-top: 13px solid transparent; border-bottom: 13px solid transparent; border-right: 13px solid #ccc }
+.iCMS_tooltip.right .arrow2 { top: 50%; left: 1px; margin-top: -13px; border-top: 13px solid transparent; border-bottom: 13px solid transparent; border-right: 13px solid #fff }
+.iCMS_tooltip.bottom .arrow { top: 0; left: 50%; margin-left: -13px; border-left: 13px solid transparent; border-right: 13px solid transparent; border-bottom: 13px solid #ccc }
+.iCMS_tooltip.bottom .arrow2 { top: 1px; left: 50%; margin-left: -13px; border-left: 13px solid transparent; border-right: 13px solid transparent; border-bottom: 13px solid #fff }
+.iCMS_tooltip.left .arrow { top: 50%; right: 0; margin-top: -13px; border-top: 13px solid transparent; border-bottom: 13px solid transparent; border-left: 13px solid #ccc }
+.iCMS_tooltip.left .arrow2 { top: 50%; right: 1px; margin-top: -13px; border-top: 13px solid transparent; border-bottom: 13px solid transparent; border-left: 13px solid #fff }
+.iCMS_tooltip .arrow, .iCMS_tooltip .arrow2 { position: absolute; width: 0; height: 0 }
+.iCMS_tooltip .popover-title { padding: 9px 15px; line-height: 1; background-color: #f5f5f5; border-bottom: 1px solid #eee; -webkit-border-radius: 3px 3px 0 0; -moz-border-radius: 3px 3px 0 0; border-radius: 3px 3px 0 0 }
+
+.iCMS_tooltip .tip-inner { overflow: hidden; background: #FFF; border: solid 1px #CCC; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; -webkit-background-clip: padding-box; -moz-background-clip: padding-box; background-clip: padding-box }
+.iCMS_tooltip .tip-inner p, .iCMS_tooltip .tip-inner ul, .iCMS_tooltip .tip-inner ol { margin-bottom: 0 }
+*/
+.zh-profile-card { width: 380px }
+.zh-profile-card .upper, .zh-profile-card .lower { border: 14px solid transparent }
+.zh-profile-card .upper { background: #fff; padding-left: 66px; min-height: 50px }
+.zh-profile-card .upper a.avatar-link { position: relative }
+.zh-profile-card .upper img.avatar { position: absolute; max-width: none; width: 50px; height: 50px; left: -66px; border-radius: 3px }
+.zh-profile-card .upper .male { background-position: -145px -111px; width: 12px; height: 12px; vertical-align: -1px; margin-left: 3px }
+.zh-profile-card .upper .female { background-position: -130px -110px; width: 10px; height: 14px; vertical-align: -1px; margin-left: 3px }
+.zh-profile-card .upper span.name { font-size: 14px; font-weight: 700 }
+.zh-profile-card .upper div.tagline { font-size: 13px; color: #222; padding-top: 4px }
+.zh-profile-card .upper .personal { padding-top: 8px }
+.zh-profile-card .upper .personal .zg-icon { vertical-align: -1px }
+.zh-profile-card .upper .personal .zg-icon.employment { background-position: -94px -111px; width: 12px; height: 11px; margin-right: 6px; margin-left: 2px }
+.zh-profile-card .upper .personal .zg-icon.education { width: 16px; height: 12px; margin-right: 4px; background-position: -111px -112px }
+.zh-profile-card .upper .personal .info-wrap { color: #999 }
+.zh-profile-card .upper .personal .info-wrap .item+.item { border-left: 1px solid #EEE; padding-left: 10px; margin-left: 10px }
+.zh-profile-card .upper .secondary { padding-top: 8px; color: #999; border-top: 1px solid #EEE; margin-top: 8px }
+.zh-profile-card .upper .secondary div span { display: inline-block }
+.zh-profile-card .upper .secondary a, .zh-profile-card .upper .secondary a:visited { color: #222 }
+.zh-profile-card .upper .other span { color: #999 }
+.zh-profile-card .upper .hr { border-top: 1px solid #eee; width: 225px; padding-top: 6px; margin-top: 6px }
+.zh-profile-card .lower { background: #fafafa }
+.zh-profile-card .lower .operation .self { line-height: 48px; float: right; color: #999 }
+.zh-profile-card .lower .operation .zg-btn, .zh-profile-card .lower .operation .zg-btn-white, .zh-profile-card .lower .operation button { float: right; margin-top: 8px; vertical-align: middle }
+.zh-profile-card .lower .operation .zg-btn { margin-left: 15px; font-size: 13px }
+.zh-profile-card .lower .operation .zg-icon.pm { background-position: 0 -148px; width: 17px; height: 14px; text-indent: -999em }
+.zh-profile-card .lower .meta .item { float: left; padding: 0 16px; border-right: 1px solid #eee; color: inherit; text-decoration: none }
+.zh-profile-card .lower .meta .item:hover { color: #698ebf }
+.zh-profile-card .lower .meta .item:hover .key { color: inherit }
+.zh-profile-card .lower .meta .item .value, .zh-profile-card .lower .meta .item .key { display: block; text-align: center }
+.zh-profile-card .lower .meta .item .value { font-size: 15px; font-weight: 700 }
+.zh-profile-card .lower .meta .item .key { font-size: 14px; color: #999 }
+.zh-profile-card .lower .meta .item:first-child { padding-left: 0 }
+.zh-profile-card .lower .meta .item:last-child { border-right: 0 none }
+
