--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -17,6 +17,7 @@
 <script src="<!--{$iCMS.UI}-->/bootstrap-2.3.1/js/bootstrap.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/artDialog-5.0.4/artDialog.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/artDialog-5.0.4/artDialog.plugins.min.js"></script>
+<script src="<!--{$iCMS.UI}-->/jquery.poshytip.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/iCMS-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS-6.0.0.js"></script>
 <script>
