--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -10,13 +10,11 @@
     <link href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" rel="stylesheet" />
     <link href="<!--{$site.urls.ui}-->/userApp-6.0.0.css" type="text/css" rel="stylesheet" />
     <script src="<!--{$site.urls.ui}-->/iCMS.comment-6.0.0.js"></script>
+
+    <script src="/app/ui/poshytip-1.2/src/jquery.poshytip.min.js"></script>
+
     <script type="text/javascript">
     $(function(){
-    //$("[data-tip^='uid']").tooltip({html: 'html'});
-    console.log($("[data-tip^='iCMS:ucard']"));
-    // iCMS.dialog("asdsad");
-    // iCMS.dialog(document.getElementById("report-dialog"));
-
 
     })
     </script>
@@ -30,9 +28,9 @@
         </div>
         <div class="card_top">
           <div class="card_info">
-            <a class="card_title_name" data-tip="iCMS:ucard:<!--{$user.uid}-->" href="<!--{$user.urls.home}-->"><!--{$user.nickname}--></a>
-            <i class="icon_<!--{$user.sex}-->"></i>
-            <a data-param='{"fuid":"<!--{$user.uid}-->","fname":"<!--{$user.nickname}-->"}' class="iCMS-user-follow follow_btn <!--{if $status.followed}-->unfollow<!--{else}-->follow<!--{/if}-->"></a>
+            <a class="card_title_name" data-tip="iCMS:ucard:<!--{$user.uid}-->" thref="<!--{$user.urls.home}-->"><!--{$user.nickname}--></a>
+            <i class="icon_<!--{$user.gender}-->"></i>
+            <a data-param='{"uid":"<!--{$user.uid}-->","name":"<!--{$user.nickname}-->","follow":"<!--{$status.followed}-->"}' class="iCMS-user-follow follow_btn <!--{if $status.followed}-->unfollow<!--{else}-->follow<!--{/if}-->"></a>
             <p class="card_slogan">
             <!--{$userdata.slogan|default:'这家伙太懒了,什么都没有留下!'}-->
             </p>
@@ -47,19 +45,19 @@
               </li>
               <li>
                 <a href="<!--{$user.urls.fans}-->">
-                <span class="text_count"><!--{$user.fans}--></span>
+                <span class="text_count"><!--{$user.fans|num10K}--></span>
                 <span class="text_atr">粉丝</span>
                 </a>
               </li>
               <li>
                 <a href="<!--{$user.urls.follow}-->">
-                <span class="text_count"><!--{$user.follow}--></span>
+                <span class="text_count"><!--{$user.follow|num10K}--></span>
                 <span class="text_atr">关注</span>
                 </a>
               </li>
               <li class='first'>
                 <a href="<!--{$user.urls.home}-->">
-                <span class="text_count"><!--{$user.article}--></span>
+                <span class="text_count"><!--{$user.article|num10K}--></span>
                 <span class="text_atr">文章</span>
                 </a>
               </li>
@@ -99,9 +97,9 @@
                 <!--{/if}-->
               </div>
               <div class="list_fun clearfix" data-param='{"iid":"<!--{$article_list.id}-->","cid":"<!--{$article_list.cid}-->","suid":"<!--{$article_list.userid}-->","title":"<!--{$article_list.title|unicode}-->"}'>
-                <a href="###" data-param='{"do":"good"}' class="iCMS-article-do" title="32个赞"><i class="icon-thumbs-up"></i> (<span><!--{$article_list.good}--></span>)</a>
-                <a href="###" data-param='{"do":"comment"}' class="iCMS-article-do" title="评论"><i class="icon-comment"></i> (<span><!--{$article_list.comments}--></span>)</a>
-                <a href="###" data-param='{"do":"favorite"}' class="iCMS-article-do" title="收藏"><i class="icon-heart"></i></a>
+                <a href="javascript:;" data-param='{"do":"good"}' class="iCMS-article-do" title="32个赞"><i class="icon-thumbs-up"></i> (<span><!--{$article_list.good}--></span>)</a>
+                <a href="javascript:;" data-param='{"do":"comment"}' class="iCMS-article-do" title="评论"><i class="icon-comment"></i> (<span><!--{$article_list.comments}--></span>)</a>
+                <a href="javascript:;" data-param='{"do":"favorite"}' class="iCMS-article-do" title="收藏"><i class="icon-heart"></i></a>
               </div>
             </li>
             <!--{/iCMS}-->
@@ -139,6 +137,8 @@
           <ul class="avatar_list">
             <!--{iCMS:user:follow loop="true" row="30" fuid=$user.uid}-->
             <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
+            <!--{iCMSelse}-->
+            <li><span class="label label-inverse">居然没人关注，太low了吧</span></li>
             <!--{/iCMS}-->
           </ul>
         </div>
@@ -150,6 +150,8 @@
           <ul class="avatar_list">
             <!--{iCMS:user:follow loop="true" row="30" userid=$user.uid}-->
             <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
+            <!--{iCMSelse}-->
+            <li><span class="label label-inverse">没有关注</span></li>
             <!--{/iCMS}-->
           </ul>
         </div>
@@ -158,11 +160,11 @@
             <h3>统计<span>STATISTICS</span></h3>
             </div><!--{iCMS:user:stat userid=$user.uid}-->
             <ul>
-              <li><span class="label label-info">今日访问：<!--{$user_stat.today}--></span></li>
-              <li><span class="label label-info">昨日访问：<!--{$user_stat.yesterday}--></span></li>
+              <li><span class="label label-success">今日访问：<!--{$user_stat.today}--></span></li>
+              <li><span class="label label-success">昨日访问：<!--{$user_stat.yesterday}--></span></li>
               <li><span class="label label-info">本周访问：<!--{$user_stat.week}--></span></li>
               <li><span class="label label-info">本月访问：<!--{$user_stat.month}--></span></li>
-              <li><span class="label label-info">所有访问：<!--{$user_stat.all}--></span></li>
+              <li><span class="label label-inverse">所有访问：<!--{$user_stat.all}--></span></li>
             </ul>
           </div>
         </div>
