--- a/template/iCMS/user/manage/fans.htm
+++ b/template/iCMS/user/manage/fans.htm
@@ -1,14 +1,43 @@
 <div class="title"><span>我的粉丝</span></div>
 <div class="pg_follow w670">
   <ul class="avatar_list">
-    <!--{iCMS:user:follow loop="true" row="30" fuid=$user.uid}-->
+    <!--{iCMS:user:follow loop="true" check="true" row="30" fuid=$user.uid}-->
     <li id="id_<!--{$user_follow.uid}-->">
-    	<a href="<!--{$user_follow.url}-->" target="_blank" ttitle="<!--{$user_follow.name}-->"><img class="avatar_90" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a>
-		<span class="label label-info"><!--{$user_follow.name}--></span>
-		<a href="javascript:;" data-param='{"fuid":"<!--{$user_follow.uid}-->","fname":"<!--{$user_follow.name}-->"}' class="btn cancel_follow">取消关注</a>
-    </li>
-	<!--{iCMSelse}-->
-	<div class="alert alert-info"><i class="fa fa-ban"></i> 暂无粉丝</div>
-    <!--{/iCMS}-->
+    <a href="<!--{$user_follow.url}-->" target="_blank" ttitle="<!--{$user_follow.name}-->"><img class="avatar_90" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a>
+    <span class="label label-info"><!--{$user_follow.name}--></span>
+    <a href="javascript:;" data-param='{"uid":"<!--{$user_follow.uid}-->","name":"<!--{$user_follow.name}-->","follow":"<!--{$user_follow.followed}-->"}' class="btn btn-success btn_follow">关注</a>
+  </li>
+  <!--{iCMSelse}-->
+  <div class="alert alert-info"><i class="fa fa-ban"></i> 暂无粉丝</div>
+  <!--{/iCMS}-->
   </ul>
 </div>
+<script>
+  var al = $(".avatar_list");
+  $("li", al).each(function() {
+    var a = $(this);
+    a.hover(function() {
+      $(".label",a).hide();
+      $(".btn_follow",a).css('display','block');
+    }, function() {
+        setTimeout(function() {
+          $(".label",a).show();
+            $(".btn_follow",a).hide();
+        }, 3000);
+    });
+  });
+  $(".btn_follow").click(function(event) {
+    event.preventDefault();
+    var $this = $(this),param = iCMS.param($this);
+    $.post(iCMS.api('user', "&do=follow"),param,
+      function(c) {
+        if (c.code) {
+          param['follow'] = (param['follow']=='1'?'0':'1');
+          iCMS.param($this,param);
+          iCMS.alert('已添加关注');
+        }else{
+          iCMS.alert(c.msg);
+        }
+    },'json');
+  });
+</script>
