--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -41,7 +41,7 @@ background: url("top.png") no-repeat; }
 .iframe { background-color: #fff; }
 .separator { height: 15px; border-top: 1px dotted #999; margin: 10px 0px 0px 0px; width: 90%; }
 .input-sp textarea { height: 90px; }
-.input-sp .add-on { height: 90px !important; width: 30px !important; white-space: normal !important; line-height: 20px !important; text-align: left; }
+.input-sp .add-on { height: 82px !important; width: 30px !important; white-space: normal !important; line-height: 20px !important; text-align: left; }
 .input-sp .s4 { width: 14px !important; }
 .openid { border: 1px solid #e5e5e5; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; padding: 10px 20px; width: 400px; }
 .openid legend { width: auto; border: 0px; margin: 0px 0px 0px 10px; padding: 4px; font-size: 14px; height: 20px; line-height: 20px; }
@@ -231,8 +231,10 @@ ul#icons li { cursor: pointer; float: left; list-style: none outside none; margi
 .recent-posts li.viewall a, .recent-comments li.viewall a, .recent-users li.viewall a { padding: 5px; text-align: center; display: block; color: #888888; }
 .recent-posts li.viewall a:hover, .recent-comments li.viewall a:hover, .recent-users li.viewall a:hover { background-color: #eeeeee; }
 .recent-posts li:last-child, .recent-comments li:last-child, .recent-users li:last-child { border-bottom: none !important; }
-.user-thumb { background: none repeat scroll 0 0 #FFFFFF; border: 1px solid #B6BCBF; float: left; height: 40px; margin-right: 10px; margin-top: 5px; padding: 2px; width: 40px; }
-.user-info { color: #666666; font-size: 11px; }
+.recent-comments p{margin: 10px;}
+.user-thumb {float: left;width: 50px;}
+.user-thumb .avatar{ background: none repeat scroll 0 0 #FFFFFF; border: 1px solid #B6BCBF; display:block; height: 50px; margin-right: 10px; margin-top: 5px; padding: 2px; width: 50px; }
+.user-info { color: #666666; }
 .site-stats { margin: 0; padding: 0; list-style: none; }
 .site-stats li { background-color: #F5F5F5; border: 1px solid #DDDDDD; cursor: pointer; margin: 0 0 10px; padding: 13px 20px 10px; position: relative; }
 .site-stats li:hover { background-color: #EDEDED; }
