--- a/template/iCMS/comment/list.default.htm
+++ b/template/iCMS/comment/list.default.htm
@@ -7,24 +7,27 @@
 		<!--{iCMS:public:ui}-->
 	</head>
 	<body class="iCMS-comment-page">
+<!--{else}-->
+<!--{assign var="tip_selector" value="iCMS:ucard:"}-->
 <!--{/if}-->
+
 		<script src="<!--{$site.urls.ui}-->/iCMS.comment-6.0.0.js"></script>
 		<div class="commentApp-list-wrap" id="iCMS-comment-list-box">
 			<div class="commentApp-list">
 				<!--{iCMS:comment:list loop="true" page="true" row="5" by="ASC" vars="$comment_vars"}-->
 				<div class="commentApp-item" data-id="<!--{$comment_list.id}-->">
-					<a title="<!--{$comment_list.user.name}-->" data-tip="iCMS:ucard:<!--{$comment_list.userid}-->" class="cmt-item-link-avatar" href="<!--{$comment_list.user.url}-->">
+					<a title="<!--{$comment_list.user.name}-->" data-tip="<!--{$tip_selector}--><!--{$comment_list.userid}-->" class="cmt-item-link-avatar" href="<!--{$comment_list.user.url}-->">
 						<img src="<!--{$comment_list.user.avatar}-->" class="cmt-item-img-avatar">
 					</a>
 					<div class="commentApp-content-wrap">
 						<div class="commentApp-content-hd">
-							<a data-tip="iCMS:ucard:<!--{$comment_list.userid}-->" href="<!--{$comment_list.user.url}-->" target="_blank" class="zg-link"><!--{$comment_list.user.name}--></a>
+							<a data-tip="<!--{$tip_selector}--><!--{$comment_list.userid}-->" href="<!--{$comment_list.user.url}-->" target="_blank" class="zg-link"><!--{$comment_list.user.name}--></a>
 							<!--{if $comment_list.suid == $comment_list.userid}-->
 							<span class="desc">（作者）</span>
 							<!--{/if}-->
 							<!--{if $comment_list.reply}-->
 							<span class="desc"> 回复 </span>
-							<a data-tip="iCMS:ucard:<!--{$comment_list.reply.uid}-->" href="<!--{$comment_list.reply.url}-->" target="_blank" class="zg-link"><!--{$comment_list.reply.name}--></a>
+							<a data-tip="<!--{$tip_selector}--><!--{$comment_list.reply.uid}-->" href="<!--{$comment_list.reply.url}-->" target="_blank" class="zg-link"><!--{$comment_list.reply.name}--></a>
 							<!--{/if}-->
 						</div>
 						<div class="commentApp-content"><!--{$comment_list.content}--></div>
