--- a/template/iCMS/user/profile/avatar.htm
+++ b/template/iCMS/user/profile/avatar.htm
@@ -1,4 +1,4 @@
-<script src="<!--{$site.urls.ui}-->/meitu/xiuxiu.js" type="text/javascript"></script>
+<script src="<!--{$iCMS.UI}-->/meitu/xiuxiu.js" type="text/javascript"></script>
 <div class="title"> <span>设置头像</span> </div>
 <div id="user_form">
 	<div id="avatar_editor">
