--- a/template/iCMS/user/profile/custom.htm
+++ b/template/iCMS/user/profile/custom.htm
@@ -12,7 +12,7 @@
     <a class="btn" href="javascript:meituxx();"><i class="fa fa-edit"></i> 使用美图秀秀编辑封面</a>
 </form>
 <div class="coverpic_editor hide mt10">
-	<script src="<!--{$site.urls.ui}-->/meitu/xiuxiu.js" type="text/javascript"></script>
+	<script src="<!--{$iCMS.UI}-->/meitu/xiuxiu.js" type="text/javascript"></script>
 	<div id="coverpic_editor"></div>
 </div>
 <script>
